[project]
name = "fairly"
version = "0.2.1"
authors = [
  { name="Serkan Girgin", email="s.girgin@utwente.nl" },
  { name="Manuel Garcia Alvarez", email="m.g.garciaalvarez@tudelft.nl" },
  { name="Jose Urra Llanusa", email="j.c.urrallanusa@tudelft.nl" }, ]
description = "A package to create, publish, and download research datasets"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent", ]
dependencies = [
    "python-dateutil",
    "requests",
		"requests_toolbelt",
    "ruamel.yaml"
    ]
keywords = ["fairly", "open science", "research data", "data management"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-recording",
    "python-dotenv",
    "vcrpy"
    ]

[project.urls]
"Homepage" = "https://github.com/ITC-CRIB/fairly"
"Bug Tracker" = "https://github.com/ITC-CRIB/fairly/issues"
"Documentation" = "https://jupyterfair.readthedocs.io/en/latest/"
"Funding" = "https://nwo.nl/en/researchprogrammes/open-science/open-science-fund"
