[project]
name = "fairly"
version = "0.4.1"
authors = [
  { name="Serkan Girgin", email="s.girgin@utwente.nl" },
  { name="Manuel Garcia Alvarez", email="m.g.garciaalvarez@tudelft.nl" },
  { name="Jose Urra Llanusa", email="j.c.urrallanusa@tudelft.nl" }, ]
description = "A package to create, publish, and download research datasets"
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent", ]
dependencies = [
    "python-dateutil",
    "requests",
		"requests_toolbelt>=1.0.0",
    "ruamel.yaml>=0.17.26",
    "typer>=0.9.0",
    "rich"
    ]
keywords = ["fairly", "open science", "research data", "data management"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "python-dotenv"
    ]

[project.urls]
"Homepage" = "https://github.com/ITC-CRIB/fairly"
"Bug Tracker" = "https://github.com/ITC-CRIB/fairly/issues"
"Documentation" = "https://fairly.readthedocs.io/en/latest/"
"Funding" = "https://nwo.nl/en/researchprogrammes/open-science/open-science-fund"

[project.scripts]
fairly = "cli:app"
