[metadata]
name = fairly
version = 1.0.0-beta
author = Serkan Girgin, Manuel Garcia Alvarez, Jose Urra Llanusa
author_email = s.girgin@utwente.nl, m.g.garciaalvarez@tudelft.nl, j.c.urrallanusa@tudelft.nl
url = https://github.com/ITC-CRIB/fairly 
description = A package to create, publish, and download research datasets from data repositories
long_description =file: README.md
long_description_content_type = text/markdown
license =
classifiers = MIT License 
    Programming Language :: Python :: 3 
    License :: OSI Approved :: MIT License 
    Operating System :: OS Independent 


[options]
python_requires = >=3.8
packages = find:
package_dir=
    =src/fairly

[options.packages.find]
where=src/fairly

install_requires = 
	pyyaml  
    python-dotenv  
    requests_toolbelt 

[options.extras_require]
dev = 
    pytest
    ipython
